fix: categories dropdown not showing on mobile
Minor HomePage code tweaks

--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -47,19 +47,8 @@
   transition: border-bottom 0.3s ease;
 }
 
-.cardAttribution {
+.cardPara {
   font-size: 1.1rem;
-}
-
-.cardAttribution a {
-  display: inline;
-  text-decoration: underline;
-  color: #fff;
-}
-
-.cardAttribution a:hover {
-  color: #000;
-  text-shadow: 0 2px 4px rgba(255, 255, 255, 0.6);
 }
 
 .shoes {
@@ -105,10 +94,6 @@
     max-height: none;
   }
 
-  .cardAttribution {
-    display: none;
-  }
-
   .shoes {
     grid-area: shoes;
   }
@@ -147,97 +132,3 @@
     width: auto;
   }
 }
-
-/*
-.categorySection {
-  overflow: hidden;
-}
-
-.categorySectionHeading {
-  text-align: center;
-  font-size: 2.5rem;
-  margin: 3rem 0 1.5rem 0;
-}
-
-.categoriesList {
-  display: grid;
-  gap: 1rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 200px 100px 100px 200px;
-  grid-template-areas:
-    "shoes shoes womensClothing jewelry"
-    "shoes shoes womensClothing jewelry"
-    "mensClothing mensClothing womensClothing jewelry"
-    "mensClothing mensClothing womensClothing jewelry";
-  padding: 0 5rem;
-}
-
-.categoriesList li {
-  position: relative;
-  transition: transform 0.3s ease;
-}
-
-.categoriesList li:hover {
-  cursor: pointer;
-  transform: scale(1.01);
-}
-
-.categoriesList li:hover .cardHeading {
-  border-color: #fff;
-}
-
-.cardText {
-  position: absolute;
-  left: 1rem;
-  bottom: 1rem;
-  color: #fff;
-  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
-}
-
-.cardHeading {
-  display: inline-block;
-  font-size: 2rem;
-  border-bottom: 2.5px solid transparent;
-  margin-bottom: 0.5rem;
-  transition: border-bottom 0.3s ease;
-}
-
-.cardAttribution {
-  font-size: 1.1rem;
-}
-
-.cardAttribution a {
-  display: inline;
-  text-decoration: underline;
-  color: #fff;
-}
-
-.cardAttribution a:hover {
-  color: #000;
-  text-shadow: 0 2px 4px rgba(255, 255, 255, 0.6);;
-}
-
-.shoes {
-  grid-area: shoes;
-  background: url("../../assets/images/shoesCategory.jpg") 0% 30% / cover
-    no-repeat;
-}
-
-.jewelry {
-  grid-area: jewelry;
-  background: url("../../assets/images/jewelryCategory.jpg") right/cover
-    no-repeat;
-}
-
-.mensClothing {
-  grid-area: mensClothing;
-  background: url("../../assets/images/mensClothingCategory.jpg") 50% 15% /
-    cover no-repeat;
-}
-
-.womensClothing {
-  grid-area: womensClothing;
-  background: url("../../assets/images/womensClothingCategory.jpg") 50% 50% /
-    cover no-repeat;
-}
-*/
