--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -43,12 +43,12 @@
 }
 
 .statement h4 {
-  font-size: 1.5rem;
+  font-size: clamp(1.25rem, 2vw, 1.75rem);
   margin-bottom: 0.5rem;
 }
 
 .statement p {
-  font-size: 1rem;
+  font-size: clamp(1rem, 2vw, 1.1rem);
 }
 
 .attributions {
@@ -56,7 +56,7 @@
 }
 
 .attributionsHeading {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   margin-bottom: 0.5rem;
 }
 
@@ -81,25 +81,5 @@
 
   .attributions {
     text-align: left;
-  }
-}
-
-@media (min-width: 1000px) {
-  .statement h4 {
-    font-size: 1.5rem;
-  }
-  
-  .statement p {
-    font-size: 1.15rem;
-  }
-}
-
-@media (min-width: 1250px) {
-  .statement h4 {
-    font-size: 1.75rem;
-  }
-  
-  .statement p {
-    font-size: 1.25rem;
   }
 }
